--- a/CNN/20133235양성호.html
+++ b/CNN/20133235양성호.html
@@ -8,82 +8,198 @@
 		<h1>Report2 : XSLT Programming(CS20133235 YSH)</h1>
 		<hr>
 		<ol>
-			<li><strong>CNN Headline News, Sunday</strong><strong>(27M36S985)</strong><ol>
-					<li><strong>Title of Headline News</strong><strong>(08S541)</strong></li>
-					<li><strong>Top Stories</strong><strong>(07M40S961)</strong><ol>
-							<li><strong>Washing Monument Attacks</strong><strong>(02M44S865)</strong></li>
-							<li><strong>Maxican Election</strong><strong>(01M39S533)</strong></li>
-							<li><strong>Deaths in Denmark Rock Festival</strong><strong>(26S427)</strong></li>
-							<li><strong>Structural Failures in Ohio</strong><strong>(31S364)</strong></li>
-							<li><strong>New Approach to Heart Transplant</strong><strong>(28S696)</strong></li>
-							<li><strong>Controversy in Northem Island</strong><strong>(28S261)</strong></li>
-							<li><strong>Libertarian Party</strong><strong>(32S232)</strong></li>
-							<li><strong>Cuba is looking for free immigration to US</strong><strong>(28S462)</strong></li>
-							<li><strong>Dalai Lama in Washington</strong><strong>(21S121)</strong></li>
+			<li><strong>CNN Headline News, Sunday
+			(27M36S985)
+		</strong><ol>
+					<li><strong>Title of Headline News
+					(08S541)
+				</strong></li>
+					<li><strong>Top Stories
+					(07M40S961)
+				</strong><ol>
+							<li><strong>Washing Monument Attacks
+					(02M44S865)
+				</strong></li>
+							<li><strong>Maxican Election
+					(01M39S533)
+				</strong></li>
+							<li><strong>Deaths in Denmark Rock Festival
+					(26S427)
+				</strong></li>
+							<li><strong>Structural Failures in Ohio
+					(31S364)
+				</strong></li>
+							<li><strong>New Approach to Heart Transplant
+					(28S696)
+				</strong></li>
+							<li><strong>Controversy in Northem Island
+					(28S261)
+				</strong></li>
+							<li><strong>Libertarian Party
+					(32S232)
+				</strong></li>
+							<li><strong>Cuba is looking for free immigration to US
+					(28S462)
+				</strong></li>
+							<li><strong>Dalai Lama in Washington
+					(21S121)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Weather Forecast</strong><strong>(01M11S038)</strong></li>
-					<li><strong>Miscellaneous</strong><strong>(52S853)</strong><ol>
-							<li><strong>Rescue Pehguins from Oil-fense in South Africa</strong><strong>(25S626)</strong></li>
-							<li><strong>World Guy Parade in Rome</strong><strong>(27S227)</strong></li>
+					<li><strong>Weather Forecast
+					(01M11S038)
+				</strong></li>
+					<li><strong>Miscellaneous
+					(52S853)
+				</strong><ol>
+							<li><strong>Rescue Pehguins from Oil-fense in South Africa
+					(25S626)
+				</strong></li>
+							<li><strong>World Guy Parade in Rome
+					(27S227)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Week at a Glance</strong><strong>(01M56S483)</strong></li>
-					<li><strong>Comming Up</strong><strong>(25S626)</strong></li>
-					<li><strong>2 Minute Report</strong><strong>(02M29S783)</strong><ol>
-							<li><strong>Title of 2 Minute Report</strong><strong>(05S872)</strong></li>
-							<li><strong>Senior Enlisted Forum</strong><strong>(01M49S543)</strong></li>
-							<li><strong>Title of 2 Minute Report</strong><strong>(03S503)</strong></li>
-							<li><strong>2 Minute Plus</strong><strong>(30S865)</strong></li>
+					<li><strong>Week at a Glance
+					(01M56S483)
+				</strong></li>
+					<li><strong>Comming Up
+					(25S626)
+				</strong></li>
+					<li><strong>2 Minute Report
+					(02M29S783)
+				</strong><ol>
+							<li><strong>Title of 2 Minute Report
+					(05S872)
+				</strong></li>
+							<li><strong>Senior Enlisted Forum
+					(01M49S543)
+				</strong></li>
+							<li><strong>Title of 2 Minute Report
+					(03S503)
+				</strong></li>
+							<li><strong>2 Minute Plus
+					(30S865)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Summary of Top Stories</strong><strong>(45S812)</strong><ol>
-							<li><strong>Title of Top Stories</strong><strong>(04S671)</strong></li>
-							<li><strong>Mexican Election</strong><strong>(17S284)</strong></li>
-							<li><strong>Washing Monument Attacks</strong><strong>(12S179)</strong></li>
-							<li><strong>Deaths in Denmark Rock Festival</strong><strong>(07S007)</strong></li>
-							<li><strong>Title of Top Stories</strong><strong>(04S671)</strong></li>
+					<li><strong>Summary of Top Stories
+					(45S812)
+				</strong><ol>
+							<li><strong>Title of Top Stories
+					(04S671)
+				</strong></li>
+							<li><strong>Mexican Election
+					(17S284)
+				</strong></li>
+							<li><strong>Washing Monument Attacks
+					(12S179)
+				</strong></li>
+							<li><strong>Deaths in Denmark Rock Festival
+					(07S007)
+				</strong></li>
+							<li><strong>Title of Top Stories
+					(04S671)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Dollars and Sense</strong><strong>(02M14S702)</strong><ol>
-							<li><strong>Title of Dollars and Sense</strong><strong>(05S739)</strong></li>
-							<li><strong>Interest Rates</strong><strong>(01M40S668)</strong></li>
-							<li><strong>Ad for Next Stories</strong><strong>(13S413)</strong></li>
-							<li><strong>Fac-tiod</strong><strong>(09S176)</strong></li>
-							<li><strong>Title of Headline News</strong><strong>(05S706)</strong></li>
+					<li><strong>Dollars and Sense
+					(02M14S702)
+				</strong><ol>
+							<li><strong>Title of Dollars and Sense
+					(05S739)
+				</strong></li>
+							<li><strong>Interest Rates
+					(01M40S668)
+				</strong></li>
+							<li><strong>Ad for Next Stories
+					(13S413)
+				</strong></li>
+							<li><strong>Fac-tiod
+					(09S176)
+				</strong></li>
+							<li><strong>Title of Headline News
+					(05S706)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>AFN Specials</strong><strong>(02M10S363)</strong><ol>
-							<li><strong>AFN Extended Forecast</strong><strong>(01M15S342)</strong></li>
-							<li><strong>AFN ad: Landing Craft Air Cushion</strong><strong>(45S478)</strong></li>
-							<li><strong>Sports Trivia</strong><strong>(09S543)</strong></li>
+					<li><strong>AFN Specials
+					(02M10S363)
+				</strong><ol>
+							<li><strong>AFN Extended Forecast
+					(01M15S342)
+				</strong></li>
+							<li><strong>AFN ad: Landing Craft Air Cushion
+					(45S478)
+				</strong></li>
+							<li><strong>Sports Trivia
+					(09S543)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Sports</strong><strong>(02M48S869)</strong><ol>
-							<li><strong>Title of Sports</strong><strong>(05S039)</strong></li>
-							<li><strong>Major League Baseball</strong><strong>(01M34S860)</strong></li>
-							<li><strong>Golf: US Senior Open</strong><strong>(17S384)</strong></li>
-							<li><strong>Soccer: European Championship</strong><strong>(13S747)</strong></li>
-							<li><strong>Title of Sports</strong><strong>(05S139)</strong></li>
-							<li><strong>Sports Trivia</strong><strong>(27S761)</strong></li>
-							<li><strong>Title of Headline News</strong><strong>(04S938)</strong></li>
+					<li><strong>Sports
+					(02M48S869)
+				</strong><ol>
+							<li><strong>Title of Sports
+					(05S039)
+				</strong></li>
+							<li><strong>Major League Baseball
+					(01M34S860)
+				</strong></li>
+							<li><strong>Golf: US Senior Open
+					(17S384)
+				</strong></li>
+							<li><strong>Soccer: European Championship
+					(13S747)
+				</strong></li>
+							<li><strong>Title of Sports
+					(05S139)
+				</strong></li>
+							<li><strong>Sports Trivia
+					(27S761)
+				</strong></li>
+							<li><strong>Title of Headline News
+					(04S938)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>AFN Specials</strong><strong>(01M01S695)</strong><ol>
-							<li><strong>AFN Space-A Forecast</strong><strong>(57S091)</strong></li>
-							<li><strong>Logo of Air Mobility Command</strong><strong>(04S604)</strong></li>
+					<li><strong>AFN Specials
+					(01M01S695)
+				</strong><ol>
+							<li><strong>AFN Space-A Forecast
+					(57S091)
+				</strong></li>
+							<li><strong>Logo of Air Mobility Command
+					(04S604)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Life Styles</strong><strong>(03M12S493)</strong><ol>
-							<li><strong>Title of life Styles</strong><strong>(04S838)</strong></li>
-							<li><strong>Celebrate Armstrong in New York</strong><strong>(31S565)</strong></li>
-							<li><strong>Sinatra Crooners</strong><strong>(02M36S090)</strong></li>
+					<li><strong>Life Styles
+					(03M12S493)
+				</strong><ol>
+							<li><strong>Title of life Styles
+					(04S838)
+				</strong></li>
+							<li><strong>Celebrate Armstrong in New York
+					(31S565)
+				</strong></li>
+							<li><strong>Sinatra Crooners
+					(02M36S090)
+				</strong></li>
 						</ol>
 					</li>
-					<li><strong>Closing Comments</strong><strong>(29S896)</strong><ol>
-							<li><strong>Comments</strong><strong>(11S178)</strong></li>
-							<li><strong>Scene of News Room</strong><strong>(15S649)</strong></li>
-							<li><strong>Title of Headline News</strong><strong>(03S069)</strong></li>
+					<li><strong>Closing Comments
+					(29S896)
+				</strong><ol>
+							<li><strong>Comments
+					(11S178)
+				</strong></li>
+							<li><strong>Scene of News Room
+					(15S649)
+				</strong></li>
+							<li><strong>Title of Headline News
+					(03S069)
+				</strong></li>
 						</ol>
 					</li>
 				</ol>
